--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,14 @@
 <% provide(:title, "Home") %>
-<h1>Sample App</h1>
-<p>
-  This is the home page for Microblogger, a sample microblogging application.
-</p>
+
+<div class="center jumbotron">
+  <h1>Welcome to Microblogger!</h1>
+  <h2>
+    This is the home page for Microblogger, a microblogging app created using the
+    <a href="http://www.railstutorial.org/">Michael Hartl's</a>
+    sample application.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org' %>
