finished layouts, routes & static pages content

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, 'Contact') %>
 <h1>Contact</h1>
 <p>
-  Contact the Ruby on Rails Tutorial about the sample app at the
-  <a href="#">contact page</a>.
+  I'm always happy to talk about Microblogger and coding in general.  Connect with me on
+  <a href="https://twitter.com/iam_mikeyoung"> Twitter</a> or
+  <a href="https://github.com/iammikeyoung/microblogging-app">GitHub</a>,
+  to talk about Ruby/Rails, the Knicks or entrepreneuship!
 </p>
