--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,12 @@
 <footer class="footer">
   <small>
-    The <a href="#">Ruby on Rails Tutorial</a>
-    by <a href="#">Michael Hartl</a>
+    <a href="https://github.com/iammikeyoung/microblogging-app">Microblogger</a>
+    by <a href="https://twitter.com/iam_mikeyoung">Michael Young</a>
   </small>
   <nav>
     <ul>
       <li><%= link_to "About", about_path %></li>
       <li><%= link_to "Contact", contact_path %></li>
-      <li><%= link_to "News", '#' %></li>
     </ul>
   </nav>
 </footer>
