--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,11 +1,11 @@
 <% provide(:title, "About") %>
 <h1>About</h1>
 <p>
-  The <a href="http://www.railstutorial.org/"><em>Ruby on Rails
-  Tutorial</em></a> is a
-  <a href="http://www.railstutorial.org/book">book</a> and
-  <a href="http://screencasts.railstutorial.org/">screencast series</a>
-  to teach web development with
-  <a href="http://rubyonrails.org/">Ruby on Rails</a>.
-  This is the sample application for the tutorial.
+  Microblogger is design to be a micro blogging application based on Twitter's design and functionality.
+  It is not for commercial use, but simply a sample application designed by
+  <a href="https://twitter.com/iam_mikeyoung"><em>Michael Young</em></a> as a practice app for Ruby on Rails.
+  You can see the code for this app at <a href="https://github.com/iammikeyoung/microblogging-app">on GiHub</a>.
+</p>
+<p>
+  Hat tip to Michael Hartl, author of the <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>.
 </p>
