--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,9 +1,8 @@
 <% provide(:title, "Help") %>
 <h1>Help</h1>
 <p>
-  Get help on Microblogger (and Ruby on Rails in general) at the
+  Get help on creating a micro blogging sample app (and Ruby on Rails in general) at the
   <a href="http://www.railstutorial.org/help">Rails Tutorial help page</a>.
   To get help on this sample app, see the
-  <a href="http://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
-  book</a>.
+  <a href="https://github.com/iammikeyoung/microblogging-app"><em>GitHub Rep</em></a> available online.
 </p>
