--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,9 +3,8 @@
 <div class="center jumbotron">
   <h1>Welcome to Microblogger!</h1>
   <h2>
-    This is the home page for Microblogger, a microblogging app created using the
-    <a href="http://www.railstutorial.org/">Michael Hartl's</a>
-    sample application.
+    This is the home page for Microblogger, a microblogging app similar to Twitter and Tumblr, created by
+    <a href="https://twitter.com/iam_mikeyoung">Michael Young</a> as a Ruby on Rails project.
   </h2>
 
   <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
