updated static pages

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,10 +1,13 @@
 <% provide(:title, "About") %>
 <h1>About</h1>
 <p>
-  Microblogger is design to be a micro blogging application based on Twitter's design and functionality.
-  It is not for commercial use, but simply a sample application designed by
-  <a href="https://twitter.com/iam_mikeyoung"><em>Michael Young</em></a> as a practice app for Ruby on Rails.
-  You can see the code for this app at <a href="https://github.com/iammikeyoung/microblogging-app">on GiHub</a>.
+  Microblogger is a twitter-style blog (micro blog).
+  It is a full-stack Ruby on Rails web application hosted live on Heroku, with the source code listed on Github.
+</p>
+<p>
+  Microblogger is not for commercial use, but simply a sample application designed by
+  <a href="https://twitter.com/iam_mikeyoung"><em>Michael Young</em></a> as a way to learn about Ruby on Rails and front-end development.
+  This is a continual work in progress, and you can see the code for this app at <a href="https://github.com/iammikeyoung/microblogging-app">on GiHub</a>.
 </p>
 <p>
   Hat tip to Michael Hartl, author of the <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>.
