--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -4,5 +4,5 @@
   I'm always happy to talk about Microblogger and coding in general.  Connect with me on
   <a href="https://twitter.com/iam_mikeyoung"> Twitter</a> or
   <a href="https://github.com/iammikeyoung/microblogging-app">GitHub</a>,
-  to talk about Ruby/Rails, the Knicks or entrepreneuship!
+  to talk about Ruby/Rails, the New York Knicks or entrepreneuship!
 </p>
