--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,8 +1,12 @@
 <% provide(:title, "Help") %>
 <h1>Help</h1>
 <p>
-  Get help on creating a micro blogging sample app (and Ruby on Rails in general) at the
-  <a href="http://www.railstutorial.org/help">Rails Tutorial help page</a>.
+  Microblogger is a full-stack Ruby on Rails web application hosted live on Heroku, with the source code listed on Github.
   To get help on this sample app, see the
-  <a href="https://github.com/iammikeyoung/microblogging-app"><em>GitHub Rep</em></a> available online.
+  <a href="https://github.com/iammikeyoung/microblogging-app"><em>GitHub Rep</em></a> available online,
+  or reach out to Michael Young on <a href="https://twitter.com/iam_mikeyoung">Twitter</a>.
+</p>
+<p>
+  You can also checkout a great resource for learning Ruby on Rails in general, as well as creating a sample web app at
+  <a href="http://www.railstutorial.org">the Rails Tutorial</a>.
 </p>
