--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,7 @@
 <div class="center jumbotron">
   <h1>Welcome to Microblogger!</h1>
   <h2>
-    This is the home page for Microblogger, a microblogging app similar to Twitter and Tumblr, created by
+    A Twitter-style blogging app created by
     <a href="https://twitter.com/iam_mikeyoung">Michael Young</a> as a Ruby on Rails project.
   </h2>
 
